--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@ img{
   background-color: #a00606;
   width: 100em;
   gap: 100px;
+  position: sticky;
 }
 #topics {
   display: grid;
@@ -58,9 +59,9 @@ img{
   text-align: center;
 }
 #icons {
-  display: flex;
+  
   gap: 20px;
-
+display: flex;
   justify-content: center;
   align-items: center;
   justify-self: end;
@@ -76,7 +77,7 @@ img{
 #icons > a {
   height: 25px;
   width: 25px;
-  position: relative;
+
 }
 #icons > :nth-child(2) {
   margin-right: 30px;
@@ -94,21 +95,26 @@ img{
   justify-content: center;
   align-items: center;
 }
-#searchbar {
+input.base {
+z-index: 1;
+  transition: left 2s;
+  position: relative;
+  left: -200px;
   display: none;
-  position: absolute;
-  left: 1010px;
-  z-index: 1;
-  transition: left 2s ease-in;
+  
+}
+#searchicon{
+    z-index: 999;
+}
+input.visible{
+    left:-300px ;
+   
 }
 #searchbar > input {
   height: 45px;
   width: 200px;
 }
-#searchicon {
-  position: relative;
-  z-index: 999;
-}
+
 #sidebar1 {
   background-color: white;
   border: none;
@@ -125,7 +131,7 @@ img{
   height: 600px;
   width: 300px;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-y:auto;
 }
 .mobilesidebaritems {
   background-color: blue;
