--- a/Styles/detailedArticle.css
+++ b/Styles/detailedArticle.css
@@ -1,1 +1,143 @@
 @import url("./footer.css");
+
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#articleContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 0% 6%;
+    height: auto;
+}
+
+#showArticle {
+    /* border: 1px solid red; */
+    height: 100%;
+    grid-column: 1/3;
+}
+
+#showCategoery {
+    overflow: hidden;
+    line-height: 20px;
+    height: 20px;
+    font-size: 15px;
+    margin: 5px 0;
+    color: grey;
+}
+
+#showArticle>h1 {
+    margin-top: 3vh;
+}
+
+#showArticle em {
+    font-size: 18px;
+    line-height: 26px;
+    margin-bottom: 15px;
+    margin-top: 5vh;
+    display: inline-block;
+}
+
+#authorDetails {
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 10px;
+}
+
+#authorPicBox {
+    display: flex;
+    align-items: center;
+}
+
+
+#authorPicBox p {
+    font-size: 12px;
+    line-height: 20px;
+}
+
+#authorPicBox>div>img {
+    border-radius: 50%;
+    width: 70px;
+}
+
+#socialLinks {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: right;
+}
+
+.social-icons {
+    border-radius: 50%;
+    width: 30px;
+}
+
+.social-icons:hover {
+    transform: scale(1.2);
+}
+
+
+#posterBox {
+    margin: 20px 0;
+    height: 500px;
+    width: 100%;
+}
+
+#posterBox>img {
+    height: 100%;
+    width: 100%;
+}
+
+#audioBox {
+    height: 100px;
+    width: 100%;
+    border: 1px solid red;
+    margin-bottom: 10px;
+}
+
+
+#newsContent1,
+#newsContent2,
+#newsContent3,
+#newsContent4 {
+    line-height: 35px;
+    font-size: 18px;
+}
+
+
+#readMoreButt {
+    margin: 15px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#readMoreButt>button {
+    padding: 8px 15px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(209, 1, 1, 0.863);
+    color: white;
+    border-radius: 5px;
+    border: none;
+}
+
+#readMoreButt>button:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+
+#suggestedArticle {
+    margin: 8vh 0;
+    border: 1px solid lightgrey;
+}
