--- a/index.css
+++ b/index.css
@@ -3,6 +3,14 @@ img{
     height: 200px;
     width: 300px;
 }
+body{
+  width: fit-content;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+*{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 #sidebar {
   height: 500px;
   width: 200px;
@@ -37,7 +45,7 @@ img{
 #navbar {
   display: flex;
   background-color: #a00606;
-  width: 100em;
+  width: 1400px;
   gap: 100px;
   position: sticky;
 }
@@ -186,4 +194,68 @@ input.visible{
     grid-template-columns: repeat(3,1fr);
     gap: 20px;
     padding: 20px;
+}
+#feeds{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  background-color: aqua;
+  padding: 20px;
+  
+}
+.stories{
+  background-color: blue;
+  font-size: larger;
+padding: 20px;
+width: 430px;
+height:300px ;
+}
+#feeds .stories  img {
+  width: 420px;
+}
+
+#specials{
+ display: flex;
+ gap: 40px;
+ justify-content: space-between;
+ padding: 50px;
+ font-size: larger;
+ font-style: bold;
+}
+#visualstories{
+  height: 300px;
+  width: 500px;
+  display:flex;
+  gap: 20px;
+  overflow: hidden;
+  overflow-x: scroll;
+}
+#todaysspecials{
+  height: 300px;
+  width: 500px;
+  display: flex;
+  gap: 30px;
+  overflow: hidden;
+  overflow-x: scroll;
+}
+#opinions{
+  height: 300px;
+  width: 500px;
+  gap: 10px;
+  display: flex;
+  overflow: hidden;
+  overflow-x: scroll;
+}
+#Ads{
+  height: 300px;
+  width: 500px;
+}
+button{
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+}
+button img{
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
 }
