--- a/indiaToday clone/liveTv.css
+++ b/indiaToday clone/liveTv.css
@@ -1,38 +1,156 @@
-#top_ad{
+#top_ad {
     display: flex;
     justify-content: center;
 }
 
-#ad{
+#ad {
     width: 60%;
     height: 100px;
     border: 1px solid black;
 
 }
 
+@media screen and (min-width: 990px) {
+    #outer {
+        display: flex;
+        margin-top: 30px;
+    }
 
-#outer{
-    display: flex;
-    margin-top: 30px;
+    #right {
+        width: 40%;
+        /* border: 1px solid black; */
+    }
+
+    .newsToday-flexbox {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        /* border: 1px solid black; */
+        height: 280px;
+        width: 94.5%;
+        margin-top: 10px;
+        gap: 3%;
+        /* justify-content: space-between; */
+
+    }
+
+    #left {
+        width: 67%;
+        /* border: 1px solid black; */
+        padding-left: 6%;
+    }
+
+    #rightOne {
+        height: 270px;
+        background-color: rgb(228, 224, 224);
+        border: 1px solid rgb(228, 224, 224);
+        margin-top: 53px;
+    }
+
+    #readthisDiv {
+        /* height: 500%; */
+        border: 1px solid rgb(228, 224, 224);
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 989px) {
+    #outer {
+        margin-top: 30px;
+    }
+
+    #right {
+        width: 40%;
+        /* border: 1px solid black; */
+        padding-left: 6%;
+    }
+
+    .newsToday-flexbox {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        /* border: 1px solid black; */
+        height: 280px;
+        width: 94.5%;
+        margin-top: 10px;
+        gap: 3%;
+        /* justify-content: space-between; */
+
+    }
+
+    #left {
+        width: 67%;
+        /* border: 1px solid black; */
+        padding-left: 6%;
+    }
+
+    #rightOne {
+        height: 270px;
+        background-color: rgb(228, 224, 224);
+        border: 1px solid rgb(228, 224, 224);
+        margin-top: 53px;
+    }
+
+    #readthisDiv {
+        height: 400px;
+        border: 1px solid rgb(228, 224, 224);
+    
+    }
 }
 
 
-#left{
-    width: 67%;
-    /* border: 1px solid black; */
-    padding-left: 6%;
+@media screen and (max-width: 600px) {
+
+    .newsToday-flexbox {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        /* border: 1px solid black; */
+        /* height: 280px; */
+        width: 94.5%;
+        margin-top: 10px;
+        gap: 3%;
+        /* justify-content: space-between; */
+
+    }
+
+
+    #left {
+        width: 170%;
+        /* border: 1px solid black; */
+        padding-left: 6%;
+    }
+
+    #rightOne {
+        /* height: 270px; */
+        background-color: rgb(228, 224, 224);
+        border: 1px solid rgb(228, 224, 224);
+        margin-top: 53px;
+        margin-left: 60%;
+        width: 100%;
+        margin-bottom: 10%;
+    }
+
+    #readthisDiv {
+        /* height: 400px; */
+        border: 1px solid rgb(228, 224, 224);
+        width: 150%;
+        margin-left: 35%;
+    
+    }
+
 }
 
-#newsToday-division{
+
+
+
+
+#newsToday-division {
     /* border: 1px solid black; */
     background-color: #f2f2f2;
     width: 95%;
     height: 23px;
     border-radius: 2px;
-    
+
 }
 
-#newsToday-division p{
+#newsToday-division p {
     /* margin-top: 5px; */
     margin-left: 8px;
     font-weight: 1000;
@@ -44,27 +162,17 @@
 }
 
 
-.newsToday-flexbox
-{
-    display: flex;
-    /* border: 1px solid black; */
-    height: 280px;
-    width: 94.5%;
-    margin-top: 10px;
-    justify-content: space-between;
-}
 
-.newsToday-flexbox div{
+
+/* .newsToday-flexbox div{
     width: 22%;
-    /* border: 1px solid rgb(244, 2, 2); */
-}
+    border: 1px solid rgb(244, 2, 2);
+} */
 
 .newsToday-flexbox>:nth-child(1)>:nth-child(1),
 .newsToday-flexbox>:nth-child(2)>:nth-child(1),
 .newsToday-flexbox>:nth-child(3)>:nth-child(1),
-.newsToday-flexbox>:nth-child(4)>:nth-child(1)
-
-{
+.newsToday-flexbox>:nth-child(4)>:nth-child(1) {
     /* border: 1px solid rgb(6, 6, 6); */
     height: 110px;
     width: 100%;
@@ -73,7 +181,7 @@
 .newsToday-flexbox>:nth-child(1)>:nth-child(2),
 .newsToday-flexbox>:nth-child(2)>:nth-child(2),
 .newsToday-flexbox>:nth-child(3)>:nth-child(2),
-.newsToday-flexbox>:nth-child(4)>:nth-child(2){
+.newsToday-flexbox>:nth-child(4)>:nth-child(2) {
     width: 100%;
     overflow: hidden;
     /* border: 1px solid black; */
@@ -84,7 +192,7 @@
 .newsToday-flexbox>:nth-child(1) iframe,
 .newsToday-flexbox>:nth-child(2) iframe,
 .newsToday-flexbox>:nth-child(3) iframe,
-.newsToday-flexbox>:nth-child(4) iframe{
+.newsToday-flexbox>:nth-child(4) iframe {
     width: 100%;
     height: 110px;
     font-size: 14px;
@@ -99,111 +207,102 @@
 
 
 
-#right{
-    width: 40%;
-    /* border: 1px solid black; */
+
+
+
+
+
+.rightOneAd {
+    width: 100%;
 }
 
-#HrTagTop{
+#HrTagTop {
     width: 95%;
     margin-right: 8%;
 }
 
-#liveTvH1-Tag{
+#liveTvH1-Tag {
     margin-top: -7px;
 }
 
 
-#player{
+#player {
     height: 400px;
     width: 95%;
     border: 1px solid black;
 
 }
 
-#rightDivision{
+#rightDivision {
     /* border: 1px solid rgb(230, 18, 18); */
     width: 80%;
     /* padding: 5%; */
 }
 
-#rightOne{
-    height: 270px;
-    background-color: rgb(228, 224, 224);
-    border: 1px solid rgb(228, 224, 224);
-    margin-top: 53px;
-}
 
-#readthisDiv{
-    height: 400px;
-    border: 1px solid rgb(228, 224, 224);
-    
-}
-
-#readthisDiv-Top{
-    /* border: 1px solid rgb(244, 2, 2); */
-    margin-top: -15px;
-}
-
-#readthisDiv-Top h3{
+#readthisDiv-Top h3 {
     color: #bb0a0a;
 }
 
-#readthisDiv > :nth-child(1){
+#readthisDiv> :nth-child(1) {
     height: 30%;
     border: 1px solid rgb(228, 224, 224);
     padding: 5%;
 }
 
-#readthisDiv > :nth-child(2),
-#readthisDiv > :nth-child(3),
-#readthisDiv > :nth-child(4){
+#readthisDiv> :nth-child(2),
+#readthisDiv> :nth-child(3),
+#readthisDiv> :nth-child(4) {
     border: 1px solid rgb(228, 224, 224);
     height: 20%;
 }
 
-.readthisDiv-Bottom{
+.readthisDiv-Bottom {
     display: flex;
     margin-top: -15px;
 }
 
-.readthisDiv-Bottom>:nth-child(1){
-width: 70%;
-/* border: 1px solid rgb(11, 10, 10); */
-padding-left: 3% 3% 3%;
+.readthisDiv-Bottom>:nth-child(1) {
+    width: 70%;
+    /* border: 1px solid rgb(11, 10, 10); */
+    padding-left: 3% 3% 3%;
+    overflow: hidden;
+    /* height: 100%; */
 }
 
-.readthisDiv-Bottom>:nth-child(1) >p{
+.readthisDiv-Bottom>:nth-child(1)>p {
     font-size: 16px;
     color: #111;
     font-weight: 1000;
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    
+
 }
 
-.readthisDiv-Bottom>:nth-child(2){
+.readthisDiv-Bottom>:nth-child(2) {
     width: 40%;
     /* border: 1px solid rgb(96, 119, 7); */
 }
 
-.readthisDiv-Bottom >:nth-child(2) img{
-    height: 60px;
+.readthisDiv-Bottom>:nth-child(2) img {
+    /* height: 60px; */
     width: 85%;
     padding-left: 8%;
     margin-top: 19px;
+    margin-left: 9%;
 }
 
-.readthisDiv-BottomDivisions{
+.readthisDiv-BottomDivisions {
     display: flex;
 }
 
-.readthisDiv-BottomDivisions>:nth-child(1){
+.readthisDiv-BottomDivisions>:nth-child(1) {
     width: 60%;
     /* border: 1px solid black; */
     padding-left: 5%;
+    overflow: hidden;
 }
 
-.readthisDiv-BottomDivisions>:nth-child(1) p{
+.readthisDiv-BottomDivisions>:nth-child(1) p {
     font-size: 16px;
     color: #111;
     font-weight: 1000;
@@ -211,14 +310,15 @@ padding-left: 3% 3% 3%;
     margin-top: 6px;
 }
 
-.readthisDiv-BottomDivisions>:nth-child(2){
+.readthisDiv-BottomDivisions>:nth-child(2) {
     /* border: 1px solid black; */
     width: 33%;
     padding-top: 8px;
 }
 
-.readthisDiv-BottomDivisions>:nth-child(2) img{
-    height: 60px;
+.readthisDiv-BottomDivisions>:nth-child(2) img {
+    /* height: 60px; */
     width: 83.8%;
-
+    margin-left: 9%;
+    margin-top: 8%;
 }
