--- a/Styles/india.css
+++ b/Styles/india.css
@@ -1,40 +1,79 @@
 #pic{
     /* box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; */
-    text-align: center;
+    /* text-align: center; */
     /* border: 2px solid red; */
     width: 80%;
-    padding-right: 10px;
+    /* padding-right:-10px; */
     }
 #sidepic{
     /* box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; */
     text-align: center;
     /* border: 2px solid red; */
-    width: 50%;
-    padding-right: 10px;
+    width: 125%;
+    /* padding-right: 10px; */
     }
     #single{
         display: grid;
-        grid-template-columns: 20% 80%;
+        grid-template-columns: 25% 80%;
+        height: 120px;
+        overflow: hidden;
     }
     #single >:first-child{
         display: flex;
         align-items: center;
     }
+    #details{
+        font-size: 20px;
+        width: 90%;
+        /* border: 2px solid red; */
+        margin-left: -25px;
+        /* color: grey; */
+    }
+    #details p{
+        color: black;
+        font-weight: 50;
+        /* padding-top: 0px; */
+        
+    }
+    #details h4{
+        margin-bottom: -12px;
+        /* background-color: red; */
+    }
     .img{
-        max-width: 80%;
+        max-width: 100%;
+        height: 70%;
     }
     .sideimg{
-        max-width: 40%;
+        max-width: 100%;
 
     }
+    ul{
+        padding-left: -10px;
+    }
+    li{
+        list-style: none;
+    }
+    
     aside{
         /* float: right; */
         border: 1px solid grey;
     }
+    #innerdiv{
+        display: grid;
+        grid-template-columns: 25% 80%;
+        height: 120px;
+        overflow: hidden;
+    }
+    #main{
+        padding-left: 140px;
+        padding-right: 140px;
+    }
    #newspage{
-    /* display: grid;
-    grid-template-columns: repeat(2,1fr); */
-    display: flex;
+   
+    display: grid;
+    /* grid-template-columns: repeat(2,1fr); */
+    grid-template-columns: 70% 30%;
+    /* display: flex; */
    }
    /* #flex-child{
     flex: 1;
