--- a/Styles/detailedArticle.css
+++ b/Styles/detailedArticle.css
@@ -7,6 +7,18 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#head {
+    height: 40px;
+    width: 100%;
+    background-color: aqua;
+}
+
+#navbar {
+    height: 150px;
+    width: 100%;
+    background-color: blueviolet;
+}
+
 #articleContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
