--- a/indiaToday clone/liveTv.css
+++ b/indiaToday clone/liveTv.css
@@ -197,7 +197,7 @@
     font-size: 15px;
     line-height: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    cursor: pointer;
 }
 
 .description:hover{
