--- a/Styles/india.css
+++ b/Styles/india.css
@@ -3,6 +3,8 @@
 @import url("../Styles/footer.css");
 #navbar{
     margin: 0;
+    width: 100vw;
+    /* overflow: hidden; */
 }
 /* 1206824744  9797*/
 #pic{
@@ -13,11 +15,8 @@
         transform: scale(1.3);
     }
 #sidepic{
-    /* box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; */
-    /* text-align: center; */
-    /* border: 2px solid red; */
     width: 100%;
-    /* padding-right: 10px; */
+   padding-right: 10px
     ;
     }
     #top{
@@ -107,6 +106,10 @@
     grid-template-columns: 68% 32%;
     /* display: flex; */
    }
+   body{
+    width: 100vw;
+    /* overflow: hidden; */
+   }
    
    .fontRed{
     color: #B23F3F;
@@ -114,7 +117,24 @@
    *{
     font-family: "OpenSans-Regular"
    }
-   hr{
+   /* hr{
     display: flex;
     width: 97%;
+   } */
+   #pagination{
+    margin-bottom: 35px;
+    margin-left: 35%;
+   }
+   .a{
+    padding: 5px;
+    margin: 5px;
+    text-decoration: none;
+    background-color: #fff;
+    color: black;
+    padding: 5px;
+    border: 1px solid black;
+   }
+   .a:hover{
+    background-color:rgba(255, 0, 0, 0.815) ;
+    
    }
