--- a/Styles/detailedArticle.css
+++ b/Styles/detailedArticle.css
@@ -63,6 +63,11 @@
     width: 25px;
 }
 
+body {
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
 #icons>a {
     height: 25px;
     width: 25px;
