--- a/Styles/detailedArticle.css
+++ b/Styles/detailedArticle.css
@@ -809,6 +809,20 @@ hr {
 
 /* media query starts from here ---> */
 @media (max-width: 290px) {
+
+    /* svg[Attributes Style] {
+        width: 54.799;
+        height: 40.255;
+    } */
+    #Bitcoins-logo-Dark_mode {
+        display: none;
+    }
+
+    body {
+        overflow: hidden;
+        overflow-y: scroll;
+    }
+
     #posterBox {
         margin: 10px 0;
         height: 280px;
@@ -862,6 +876,39 @@ hr {
 }
 
 @media (min-width: 291px) and (max-width: 538px) {
+    #two {
+        overflow: hidden;
+        display: flex;
+        width: auto;
+        justify-content: space-evenly;
+        box-shadow: 0px 3px rgb(163 161 161 / 20%);
+        gap: 0px;
+        padding: 10px 5px 10px 8px;
+        padding-right: 0;
+        margin-right: 0;
+    }
+
+    h3>a {
+        text-decoration: none;
+        color: #575757;
+        font-size: 12px;
+        /* font-size: larger; */
+    }
+
+    #two img {
+        height: 60px;
+        width: 80px;
+    }
+
+    #Bitcoins-logo-Dark_mode {
+        display: none;
+    }
+
+    body {
+        overflow: hidden;
+        overflow-y: scroll;
+    }
+
     #authorDetails {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: auto;
@@ -916,6 +963,55 @@ hr {
 
 
 @media (min-width: 539px) and (max-width: 920px) {
+    #sidebar1 {
+        display: block;
+        position: absolute;
+        left: -30px;
+        margin-right: 30px;
+    }
+
+    .mobilesidebaritems {
+        display: block;
+    }
+
+    #two {
+        overflow: hidden;
+        display: flex;
+        width: auto;
+        justify-content: space-evenly;
+        box-shadow: 0px 3px rgb(163 161 161 / 20%);
+        gap: 0px;
+        padding: 10px 5px 10px 8px;
+        padding-right: 0;
+        margin-right: 0;
+    }
+
+    h3>a {
+        text-decoration: none;
+        color: #575757;
+        font-size: larger;
+        /* font-size: larger; */
+    }
+
+    #two img {
+        height: 60px;
+        width: 100px;
+    }
+
+    #navBar,
+    #one {
+        display: none;
+    }
+
+    #Bitcoins-logo-Dark_mode {
+        display: none;
+    }
+
+    body {
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+
     #authorDetails {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: auto;
