--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -1,17 +1,24 @@
-*{
+* {
     padding: 0;
-    margin:0;
-    
+    margin: 0;
+
 }
-#one{
+
+/* saurabh added missing css --> */
+#account:hover {
+    cursor: pointer;
+}
+
+/* saurabh added missing css --> */
+#one {
     margin: none;
     background-color: white;
     display: flex;
     justify-content: left;
     gap: 20px;
-   padding: 10px;
-  
-    
+    padding: 10px;
+
+
     padding: none;
     padding-left: 70px;
     padding-right: 50px;
@@ -22,43 +29,50 @@
 
     width: 100vw;
 }
-h5 > a{
+
+h5>a {
     display: flex;
-    white-space:nowrap;
+    white-space: nowrap;
     color: #938e8e;
-    font: 12px ;
+    font: 12px;
     font-weight: 700;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
-    
+
 }
- h3>a {
+
+h3>a {
     text-decoration: none;
     color: #575757;
     font-size: larger;
-   
-    
+
+
 }
-#two{
+
+#two {
     display: flex;
     justify-content: center;
     gap: 50px;
     margin-top: 20px;
     margin-bottom: 20px;
-    
+
 }
-#logo{
+
+#logo {
     display: flex;
-   
+
 }
-#two > h3{
+
+#two>h3 {
     display: flex;
 }
-#two > h3 >img{
+
+#two>h3>img {
     height: 24px;
     width: 24px;
 }
-#two img{
+
+#two img {
     height: 60px;
     width: 104px;
 }
